@@ -1,1 +1,1 @@
-<?php return array('dependencies' => array('wp-polyfill'), 'version' => 'a7a238623ea0e487c399');
+<?php return array('dependencies' => array('wp-polyfill'), 'version' => '2b2dc071b7dcdc108565');
