@@ -198,11 +198,14 @@ class Styles implements Integration {
 				'core/cover',
 				'core/column',
 				'core/columns',
+				'core/comments',
 				'core/group',
 				'core/media-text',
+				'core/query-no-results',
 				// Blocks that render others
 				'core/template-part',
 				'core/post-template',
+				'core/comment-template',
 				// Here we need "cancel reply" link to be hidden
 				'core/post-comments-form',
 				// Blocks with inline formatting (text blocks)
@@ -211,7 +214,6 @@ class Styles implements Integration {
 				'core/pullquote',
 				'core/verse',
 				'core/preformatted',
-				'core/query-no-results',
 				// for others (h/p/ul/ol) see bellow (they dont have autogenerated classes)
 			] ) ) {
 				$block_ = explode( '/', $block_name );
@@ -458,7 +460,8 @@ class Styles implements Integration {
 			'core/comment-edit-link',
 			'core/comment-reply-link',
 			'core/comment-template',
-			'core/comments-query-loop',
+			'core/comments',
+			'core/comments-query-loop', // Deprecated
 			'core/comments-pagination',
 			'core/comments-pagination-next',
 			'core/comments-pagination-previous',
@@ -500,8 +503,8 @@ class Styles implements Integration {
 			'core/post-featured-image',
 			'core/post-navigation-link',
 			'core/post-template',
-			'core/post-comment',
-			'core/post-comments',
+			'core/post-comment', 	// Deprecated
+			'core/post-comments', 	// Deprecated
 			'core/post-comments-link',
 			'core/post-comments-form',
 			'core/post-comments-count',
