@@ -31,7 +31,7 @@
             <!-- wp:comment-content {"backgroundColor":"white","className":"p-3 mt-3 mb-0 border rounded"} /-->
             <!-- wp:comment-reply-link {"className":"float-end"} /-->
             <!-- /wp:comment-template -->
-            <!-- wp:comments-pagination -->
+            <!-- wp:comments-pagination {"className":"my-5"} -->
             <!-- wp:comments-pagination-numbers /-->
             <!-- /wp:comments-pagination -->
             <!-- wp:post-comments-form /-->
